2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* include/rdbg/i386/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* include/rdbg/m68k/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* include/rdbg/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* include/rdbg/powerpc/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* include/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* src/i386/any/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* src/i386/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* src/m68k/any/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* src/m68k/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* src/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* src/powerpc/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* src/powerpc/new_exception_processing/Makefile.am: Remove AUTOMAKE_OPTIONS.

2002-03-20	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	PR 149
	* src/i386/any/Makefile.am: s/$(SED)/sed/.
	* src/m68k/any/Makefile.am: s/$(SED)/sed/.
	* src/powerpc/new_exception_processing/Makefile.am: s/$(SED)/sed/.
	(Reported by Till Straumann <strauman@SLAC.Stanford.EDU>)

2002-02-01	Eric Valette <valette@crf.canon.fr>


	* So many patches have been posted recently on the mailing list and 
	because we were unable to find correct solution to compile on various 
	linux distros (due to rpcgen incompatibilities), and because the coding 
	style of rdbg was rather inconsistant among various pieces of code, I 
	decided to:
	    1) make some cleaning regarding global coding style (using
	       indent + manual edits),
	    2) incorporate/review the paches send by various people
	       (S. Holford, T. Strauman),
	    3) Fix the bug due to varying rpcgen code generation
	       in remdeb_svc.c,
	    4) Remove some dead code,
	    5) Apply a patches enabling to call enterRdbg imediately
	       after rdbg initialization is done,

	NB : the paches is huge but it is mainly due to coding styke chnages. 